<resources>
    <string name="app_name">EjemploAndroid</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contrasenia</string>
    <string name="entrar">Entrar</string>
    <string name="nombre">Nombre</string>
    <string name="genero">Genero</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="siguiente">Siguiente</string>
    <string name="intereses">Intereses</string>
    <string name="resumen">Resumen</string>

    <string-array name="ocup">
        <item>Estudiante</item>
        <item>Profesor</item>
        <item>Chofer</item>
        <item>Vendedor</item>
    </string-array>

</resources>
